--- a/Index_module.html
+++ b/Index_module.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>UFO Finder</title>
+   <!--link to BootStrap-->    
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
+     <!--link to external CSS file-->
     <link rel="stylesheet" href="static/css/style.css" />
   </head>
 
@@ -25,44 +27,44 @@
         <h1 class="display-4">The Truth is Out There</h1>
       </div>
 
-      <!-- Article title and paragraph -->
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-4 article-title">
-            <h3>UFO Sightings: Fact or Fancy? <small>Ufologists weigh in</small></h3>
+            <h3>UFO Sightings: Fact of Fancy? <small>Ufologists Weigh In</small></h3>
           </div>
-          <div class="col-md-8 article-p">
+          <div class="col-md-8 article-title">
             <p>
-              Are we alone in the universe? For millennia, humans have turned to the sky to answer
-              this question. Now, thanks to research generously funded by W. Avy, a UFO-enthusiast
-              and amatuer Ufologist, we can supplement our sky-searching with data analysis.
-              <br /><br />"The release of this analysis is well-timed: it coincides with the
-              celebration of World UFO Day, which is a moment for ufologists around the world to
-              connect, relax, and sample a range of UFO-themed snacks," said Dr. Ursula F. Olivier,
-              the world's preeminent expert on circular sightings. "Citizen-scientists can be
-              especially helpful in both cataloguing sightings - which is hugely helpful for us in
-              our search for aliens - and in helping us celebrate the work that has already been
-              done, such as this data visualisation project, which will help us raise awareness of
-              the ubiquity of sightings!"<br /><br />
-              Not everyone is ready to celebrate, however. Local CEO and vocal anti-alien activist V
-              Isualize reached out to our reporters to go on record as firmly opposed to any
-              attempts to provide access to this data. "If there are aliens, they certainly would
-              like to be left alone," she stated, before directing us to the Leave Aliens Alone
-              (LAA) community engagement initiative she founded and funds. <br /><br />
-              So what do YOU think? Are we alone in the universe? Are aliens trying to contact us, 
-              or do they want to be left alone?
-              Dig through the data yourself, and let us know what you see.
-            </p>
+                Are we alone in the universe? For millennia, humans have turned to the sky to answer
+                this question. Now, thanks to research generously funded by W. Avy, a UFO-enthusiast
+                and amatuer Ufologist, we can supplement our sky-searching with data analysis.
+                <br /><br />
+                "The release of this analysis is well-timed: it coincides with the
+                celebration of World UFO Day, which is a moment for ufologists around the world to
+                connect, relax, and sample a range of UFO-themed snacks," said Dr. Ursula F. Olivier,
+                the world's preeminent expert on circular sightings. "Citizen-scientists can be
+                especially helpful in both cataloguing sightings - which is hugely helpful for us in
+                our search for aliens - and in helping us celebrate the work that has already been
+                done, such as this data visualisation project, which will help us raise awareness of
+                the ubiquity of sightings!"<br /><br />
+                Not everyone is ready to celebrate, however. Local CEO and vocal anti-alien activist V
+                Isualize reached out to our reporters to go on record as firmly opposed to any
+                attempts to provide access to this data. "If there are aliens, they certainly would
+                like to be left alone," she stated, before directing us to the Leave Aliens Alone
+                (LAA) community engagement initiative she founded and funds. <br /><br />
+                So what do YOU think? Are we alone in the universe? Are aliens trying to contact us, 
+                or do they want to be left alone? Dig through the data yourself, and let us know 
+                what you see.
+              </p>
           </div>
         </div>
       </div>
 
-      <!-- Filter -->
+<!--Filter and Table-->
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-3">
             <div class="filters">
-              <form class="bg-dark">
+              <form class="bg-dark">    
                 <p>Filter Search</p>
                 <ul class="list-group">
                   <li class="list-group-item bg-dark">
@@ -85,12 +87,22 @@
                     <label for="shape">Enter a Shape</label>
                     <input type="text" id="shape" class="form-control" placeholder="circle" />
                   </li>
+                  <li class="list-group-item bg-dark">
+                  <button id="filter-btn" type="button" class="btn btn-default">
+                      Filter Table
+                  </button>
+                  </li>
+                  <li class="list-group-item bg-dark">
+                  <button id="clear-btn" type="button" class="btn btn-default">
+                      Clear Table
+                  </button>
+                  </li>
                 </ul>
               </form>
             </div>
-          </div>
+          </div> 
 
-          <!-- Table -->
+ <!--Dynamic Table-->
           <div class="col-md-9">
             <table class="table table-striped">
               <thead>
@@ -103,15 +115,29 @@
                   <th>Duration</th>
                   <th>Comments</th>
                 </tr>
-              </thead>
-              <tbody></tbody>
-            </table>
-          </div>
+            </thead>
+            <tbody></tbody>
+          </table>
         </div>
       </div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
-    <script src="static/js/data.js"></script>
-    <script src="static/js/app.js"></script>
+   </div>
+
+ <!--JS Script with D3 Library-->   
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
+   <script src="static/js/data.js"></script>
+   <script src="static/js/app.js"></script>
   </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
